Fix popLater enter-from class & Add delay to avoid overlap

--- a/packages/styles/src/app.scss
+++ b/packages/styles/src/app.scss
@@ -1383,14 +1383,15 @@ position: relative;
   animation: fadeIn 500ms
 }
 .fadeInOut-leave-active {
-  animation: fadeOut 500ms
+  animation: fadeOut 0
 }
 
 
 .popLater-enter-active {
-  transition: opacity .2s linear .5s
+  transition: opacity .2s linear .5s;
+  transition-delay: 500ms;
 }
-.popLater-enter, .popLater-leave-active, .popLater-leave-to {
+.popLater-enter-from, .popLater-leave-active {
   opacity: 0;
 }
 
